--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1{
 section{
 
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -34,7 +35,7 @@ section{
     text-decoration: none;
     background-image:linear-gradient(orange, tomato);
     color: white;
-    font-weight: 400px;
+    font-weight: 700px;
     padding: 10px 40px;
     border-radius: 5px;
 
@@ -46,4 +47,9 @@ section{
 }
 body{
     margin: 0%;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
