--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ font-family: 'Zen Loop', cursive;
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
  
 .orange-color{
     color: orangered;
 }
 
-section{
+.flexible-continer{
 
     display: flex;
     margin-bottom: 100px;
@@ -52,4 +55,31 @@ body{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+
+.experince-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    border-left: 5px ;
+}
+
+#web-dev-expreience{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+#full-stack-developer{
+    border-left: 7px solid;
+    border-image:linear-gradient(red, cyan);
+    border-image-slice: 1;
+
 }
